--- a/charge-lnd/charge.config
+++ b/charge-lnd/charge.config
@@ -12,9 +12,21 @@ strategy = ignore
 [proportional]
 # 'proportional' can also be used to auto balance (lower fee rate when low remote balance & higher rate when higher remote balance)
 # fee_ppm decreases linearly with the channel balance ratio (min_fee_ppm when ratio is 1, max_fee_ppm when ratio is 0
-chan.min_ratio = 0
+chan.min_ratio = 0.2
 chan.max_ratio = 1
 strategy = proportional
 base_fee_msat = 0
-min_fee_ppm = 10
-max_fee_ppm = 150
+min_fee_ppm = 5
+max_fee_ppm = 250
+
+[discourage-routing]
+# if balance ratio <= 0.2 (less than 20% on our side) then disable outbound via a high base fee.
+chan.max_ratio = 0.2
+strategy = static
+base_fee_msat = 9_999
+fee_ppm = 250
+
+[zerobasefee]
+# set base_fee_msat default to 0 if peer sets zero base fees
+chan.max_fee_ppm = 0
+base_fee_msat = 0
